# GoldView

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_app.py  build_log.txt  build_native.bat  calculator.py  gold_view.py  package.bat  pyproject.toml
assets/calculator/: app.js  calc-core.js  calc-core.test.js  calculator.css  index.html
docs/: GoldView任务栏技术实现说明.md  GoldView设置任务需求与实现方案.md  TrafficMonitor双模式重构方案.md  Win11原生稳定方案评估.md  ai-python-coding-standard.md  spec.md
docs/tasks/: task.md  任务记录.md
include/: app.h  average_service.h  host_window.h  models.h  quote_source.h  settings_store.h  source_manager.h  taskbar_anchor_resolver.h  taskbar_slot_controller.h  taskbar_text_style.h  taskbar_topology_detector.h  webui_window.h
legacy/pyqt-v2.3.0/: README.md  calculator.py  gold_view.py  pyproject.toml  requirements.txt
legacy/pyqt-v2.3.0/core/: __init__.py  average_service.py  models.py  price_service.py  settings_service.py
legacy/pyqt-v2.3.0/docs/: AI编写代码规范.md  TrafficMonitor真任务栏模式重构方案.md
legacy/pyqt-v2.3.0/shell/: __init__.py  floating_window_adapter.py  mode_manager.py  taskbar_window_adapter.py
native/: CMakeLists.txt  README.md  build_native.bat
native/include/: app.h  calculator_window.h  floating_host.h  icon_utils.h  models.h  price_service.h  settings_store.h  settings_window.h  source_manager.h  taskbar_host.h  taskbar_logger.h  taskbar_metrics.h  taskbar_tray_detector.h  theme.h
native/src/: app.cpp  average_service.cpp  calculator_window.cpp  floating_host.cpp  main.cpp  price_service.cpp  settings_store.cpp  settings_window.cpp  source_manager.cpp  taskbar_host.cpp  taskbar_metrics.cpp  taskbar_slot_controller.cpp  taskbar_tray_detector.cpp  webui_window.cpp
native/webui/calculator/: app.js  index.html
native/webui/source-control/: app.js  index.html
src/app/: app.cpp  app_layout.cpp  app_tray.cpp  app_window.cpp  main.cpp
src/pricing/: price_service.cpp  quote_source.cpp  source_manager.cpp  source_manager_health.cpp  source_manager_selection.cpp  source_manager_tick.cpp
src/settings/: settings_store.cpp  settings_window.cpp
src/taskbar/: taskbar_anchor_resolver.cpp  taskbar_host.cpp  taskbar_logger.cpp  taskbar_metrics.cpp  taskbar_topology_detector.cpp
src/ui/: calculator_window.cpp  webui_window.cpp
src/utils/: icon_utils.cpp
tests/: taskbar_text_style_test.cpp
webui/calculator/: app.js  calculator.css  index.html
webui/common/: base.css  bridge.js
