[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GoldView"
version = "1.0.0"
description = "A minimalist gold price floating window and average price calculator."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GoldView Contributors"}
]
dependencies = [
    "PyQt6>=6.7.1",
    "requests>=2.32.4",
]

[tool.setuptools]
py-modules = ["gold_view", "calculator"]
packages = ["core", "shell"]
